# mumdota

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  client.html  config.toml
.github/workflows/: docker.yml
docs/: frontend-api.md
docs/plans/: 2026-03-06-mumble-webrtc-proxy-design.md
src/: bridge.rs  config.rs  main.rs  server.rs  session.rs
src/mumble/: client.rs  mod.rs  proto.rs  voice.rs
src/webrtc/: audio.rs  mod.rs
src/ws/: handler.rs  messages.rs
