[package]
name = "mumdota"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework & WebSocket
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# WebRTC
webrtc = "0.11"
webrtc-media = "0.8"

# Mumble protocol
mumble-protocol = "0.4"

# TLS for Mumble
native-tls = "0.2"
tokio-native-tls = "0.3"

# Codec framing (0.6 for mumble-protocol compatibility)
tokio-util = { version = "0.6", features = ["codec", "net"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async utilities
futures = "0.3"
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
